test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/udr_call_in_bzl/BUCK.fixture
load("//errors/udr_call_in_bzl:example_rule_reexport.bzl", "example_rule")

example_rule(name = "example")
